8. Fix "os-info-grid" component styling 8.1 font-size 8.2 button size, shape 8.3 buttons spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -391,6 +391,28 @@ img {
       "os-info-grid__ios-button os-info-grid__mac-button";
   }
 
+  .os-info-grid__title {
+    font-size: 2.25rem;
+  }
+
+  .os-info-grid__info {
+    font-size: 1.35rem;
+    padding: 0 14rem;
+  }
+
+  .os-info-grid > button {
+    padding: 1rem 0;
+    width: 16rem;
+  }
+
+  .os-info-grid__ios-button {
+    justify-self: end;
+  }
+
+  .os-info-grid__mac-button {
+    justify-self: start;
+  }
+
   /* component 7 */
   .footer-grid {
     display: grid;
